feat: use large for less epochs:

--- a/model_test.ipynb
+++ b/model_test.ipynb
@@ -438,15 +438,115 @@
    "execution_count": null,
    "id": "6bbbc33b",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c97e267ab38f4a2999a6996c523fa3fc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resolving data files:   0%|          | 0/294 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dc90892449804d5fa0f9d74756586cca",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resolving data files:   0%|          | 0/28 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "af116acfe3254fee8788345c042c9c31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resolving data files:   0%|          | 0/294 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08c5e26fe3c544a5bca81def1aeba644",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Resolving data files:   0%|          | 0/28 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b5df32fc10ef4240bfa2cdcca84398f2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0/294 [00:00<?, ?files/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "82440c81ece8466da1e2b0610dd28231",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "data/train-00000-of-00294.parquet:   0%|          | 0.00/505M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "# Login using e.g. `huggingface-cli login` to access this dataset\n",
+    "# image_net_train = load_dataset(\"ILSVRC/imagenet-1k\", cache_dir=\"./data/\", split=\"train\")\n",
+    "image_net_valid = load_dataset(\"ILSVRC/imagenet-1k\", cache_dir=\"./data/\", split=\"valid\")\n",
+    "image_net_test = load_dataset(\"ILSVRC/imagenet-1k\", cache_dir=\"./data/\", split=\"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e63e1fd",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "CS2952X: SSL",
+   "display_name": "ssl",
    "language": "python",
-   "name": "ssl"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
